--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <form action="" id="roundForm">
+        <input type="number" id="numRounds" placeholder="Number of Rounds">
+        <input type="text" name="playerOne" id="playerOne" placeholder="Enter Player 1 Name">
+        <input type="text" name="playerTwo" id="playerTwo" placeholder="Enter Player 2 Name">
+        <input type="submit" value="Submit">
+    </form>
+    <div class="game-board">
+        <div class="grid-pos" id="0"></div>
+        <div class="grid-pos" id="1"></div>
+        <div class="grid-pos" id="2"></div>
+        <div class="grid-pos" id="3"></div>
+        <div class="grid-pos" id="4"></div>
+        <div class="grid-pos" id="5"></div>
+        <div class="grid-pos" id="6"></div>
+        <div class="grid-pos" id="7"></div>
+        <div class="grid-pos" id="8"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
