--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <form action="" id="roundForm">
+    <form action="#" id="roundForm">
         <input type="number" id="numRounds" placeholder="Number of Rounds">
         <input type="text" name="playerOne" id="playerOne" placeholder="Enter Player 1 Name">
         <input type="text" name="playerTwo" id="playerTwo" placeholder="Enter Player 2 Name">
